--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "@supabase/supabase-js": "^2.44.4",
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "lucide-react": "^0.344.0",
+    "@radix-ui/react-toast": "latest",
     "tailwindcss": "latest",
-    "@radix-ui/react-toast": "latest"
+    "postcss": "latest",
+    "autoprefixer": "latest",
+    "@supabase/supabase-js": "2.39.7"
   }
 }
